fix typo in tutorial

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -115,8 +115,11 @@
     "\n",
     "    # Pose\n",
     "    # ... instantiate rotations\n",
-    "    rotation = SO3.sample_uniform(key)\n",
+    "\n",
     "    key, subkey = jax.random.split(key)  # split the key to use for the next random number\n",
+    "\n",
+    "    rotation = SO3.sample_uniform(subkey)\n",
+    "    key, subkey = jax.random.split(key)  # do this everytime you use a key!!\n",
     "\n",
     "    # ... now in-plane translation\n",
     "    ny, nx = instrument_config.shape\n",
@@ -125,7 +128,6 @@
     "        * jnp.asarray((nx, ny))\n",
     "        * instrument_config.pixel_size\n",
     "    )\n",
-    "    key, subkey = jax.random.split(key)  # do this everytime you use a key!!\n",
     "\n",
     "    # ... convert 2D in-plane translation to 3D, setting the out-of-plane translation to\n",
     "    # zero\n",
@@ -145,6 +147,7 @@
     "    key, subkey = jax.random.split(key)\n",
     "\n",
     "    phase_shift = jax.random.uniform(subkey, (), minval=0, maxval=0)\n",
+    "    # no more random numbers needed\n",
     "\n",
     "    # now generate your non-random values\n",
     "    spherical_aberration_in_mm = 2.7\n",
