add b factors to beginning of tutorial notebook

--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,10 @@
     "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities = read_atoms_from_pdb(\"./data/5w0s.pdb\")\n",
-    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities)"
+    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
+    "    \"./data/5w0s.pdb\", get_b_factors=True\n",
+    ")\n",
+    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)"
    ]
   },
   {
