--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -186,9 +186,7 @@
    "outputs": [],
    "source": [
     "# ... create the structural ensemble\n",
-    "structural_ensemble = cxs.SingleStructureEnsemble(\n",
-    "    conformational_space=potential, pose=pose_grid\n",
-    ")\n",
+    "structural_ensemble = cxs.SingleStructureEnsemble(potential=potential, pose=pose_grid)\n",
     "# ... now the scattering theory\n",
     "transfer_theory = particle_stack.transfer_theory\n",
     "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
@@ -596,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
