--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -83,29 +83,28 @@
       "    shape=(100, 100),\n",
       "    pixel_size=f32[],\n",
       "    voltage_in_kilovolts=f32[],\n",
-      "    electrons_per_angstrom_squared=f32[],\n",
+      "    electrons_per_angstrom_squared=weak_f32[],\n",
       "    padded_shape=(100, 100),\n",
       "    pad_mode='constant'\n",
       "  ),\n",
       "  pose=EulerAnglePose(\n",
-      "    offset_x_in_angstroms=f32[],\n",
-      "    offset_y_in_angstroms=f32[],\n",
+      "    offset_x_in_angstroms=weak_f32[],\n",
+      "    offset_y_in_angstroms=weak_f32[],\n",
       "    offset_z_in_angstroms=0.0,\n",
-      "    view_phi=f32[],\n",
-      "    view_theta=f32[],\n",
-      "    view_psi=f32[]\n",
+      "    view_phi=weak_f32[],\n",
+      "    view_theta=weak_f32[],\n",
+      "    view_psi=weak_f32[]\n",
       "  ),\n",
       "  transfer_theory=ContrastTransferTheory(\n",
       "    ctf=ContrastTransferFunction(\n",
       "      defocus_in_angstroms=f32[],\n",
       "      astigmatism_in_angstroms=f32[],\n",
       "      astigmatism_angle=f32[],\n",
-      "      voltage_in_kilovolts=300.0,\n",
       "      spherical_aberration_in_mm=f32[],\n",
       "      amplitude_contrast_ratio=f32[],\n",
       "      phase_shift=f32[]\n",
       "    ),\n",
-      "    envelope=Constant(value=f32[])\n",
+      "    envelope=Constant(value=weak_f32[])\n",
       "  ),\n",
       "  image_stack=f32[100,100]\n",
       ")\n"
@@ -214,10 +213,9 @@
      "output_type": "stream",
      "text": [
       "ContrastTransferFunction(\n",
-      "  defocus_in_angstroms=Array([10050.97, 10050.97, 10050.97], dtype=float32),\n",
-      "  astigmatism_in_angstroms=Array([-50.970703, -50.970703, -50.970703], dtype=float32),\n",
+      "  defocus_in_angstroms=Array([10025.484, 10025.484, 10025.484], dtype=float32),\n",
+      "  astigmatism_in_angstroms=Array([50.970703, 50.970703, 50.970703], dtype=float32),\n",
       "  astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
-      "  voltage_in_kilovolts=300.0,\n",
       "  spherical_aberration_in_mm=Array(2.7, dtype=float32),\n",
       "  amplitude_contrast_ratio=Array(0.1, dtype=float32),\n",
       "  phase_shift=Array([0., 0., 0.], dtype=float32)\n",
