more small updatse

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial demonstrates how to generate a Relion Dataset using `cryojax`. This tutorial builds upon tools already shown in other tutorials, so we might skip over some details."
+    "This tutorial demonstrates how to generate a particle_reader in Relion using `cryojax`. This tutorial builds upon tools already shown in other tutorials, so we might skip over some details."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!!! info \"For more information on the RelionDataset object, check our `Read a particle stack` tutorial.\""
+    "!!! info \"For more information on reading data in RELION, check our `Read a particle stack` tutorial.\""
    ]
   },
   {
@@ -484,8 +484,8 @@
     "\n",
     "    The arguments to call this function are:\n",
     "\n",
-    "    - `dataset`: needs to be an instance of `RelionDataset`\n",
-    "    - `compute_image`: function that should take (RelionDataset, args) or (jax.PRNGKey, RelionDataset, args) as input\n",
+    "    - `metadata_reader`: needs to be an instance of `RelionParticleMetadataReader`\n",
+    "    - `compute_image`: function that should take (RelionParticleMetadata, args) or (jax.PRNGKey, RelionParticleMetadata, args) as input\n",
     "    - `args`: the args for `compute_image` function\n",
     "    - `is_jittable`: whether or not your function can be jitted with `equinox.filter_jit`. (If you are not sure, run it and set it to False if it does not work)\n",
     "    - `batch_size_per_mrc`: if your function is jittable we will vmap the computation of the images, which might have a big memory usage. If you get some \"Ran out of memory\" error, then adjust this batch size. Setting it to \"None\" will assume no batching needs to be done. Setting it to 1 runs the code in serial mode.\n",
@@ -680,9 +680,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_noiseless = RelionParticleStackReader(metadata_reader)\n",
+    "particle_reader_noiseless = RelionParticleStackReader(metadata_reader)\n",
     "\n",
-    "dataset_noisy = RelionParticleStackReader(metadata_reader_for_noise_images)"
+    "particle_reader_noisy = RelionParticleStackReader(metadata_reader_for_noise_images)"
    ]
   },
   {
@@ -708,14 +708,14 @@
     "    a.set_axis_off()\n",
     "\n",
     "im1 = plot_image(\n",
-    "    dataset_noiseless[0].image_stack,\n",
+    "    particle_reader_noiseless[0].image_stack,\n",
     "    fig,\n",
     "    ax[0],\n",
     "    label=\"image without noise\",\n",
     ")\n",
     "\n",
     "im2 = plot_image(\n",
-    "    dataset_noisy[0].image_stack,\n",
+    "    particle_reader_noisy[0].image_stack,\n",
     "    fig,\n",
     "    ax[1],\n",
     "    label=\"image with noise\",\n",
