--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -225,14 +225,14 @@
    "source": [
     "import jax.numpy as jnp\n",
     "\n",
-    "import cryojax as cx\n",
     "from cryojax.image import irfftn\n",
+    "from cryojax.utils import get_filter_spec\n",
     "\n",
     "\n",
     "# Grab an `equinox` filter specification where the CTF parameters\n",
     "# have a batch dimension. These parameters are those not in the RELION\n",
     "# optics group.\n",
-    "per_particle_filter_spec = cx.get_filter_spec(\n",
+    "per_particle_filter_spec = get_filter_spec(\n",
     "    imaging_pipeline,\n",
     "    lambda p: (\n",
     "        p.scattering_theory.transfer_theory.ctf.defocus_in_angstroms,\n",
@@ -244,7 +244,7 @@
     ")\n",
     "\n",
     "\n",
-    "@partial(cx.filter_vmap_with_spec, filter_spec=per_particle_filter_spec, in_axes=(0, 0))\n",
+    "# @partial(cx.filter_vmap_with_spec, filter_spec=per_particle_filter_spec, in_axes=(0, 0))\n",
     "def cross_correlation(pipeline, fourier_observed_image):\n",
     "    \"\"\"Compute the cross-correlation, batched over images in the `fourier_image_stack`,\n",
     "    and per-particle parameters in the `pipeline`.\n",
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "# Get a specification for where the grid points are\n",
-    "tree_grid_filter_spec = cx.get_filter_spec(\n",
+    "tree_grid_filter_spec = get_filter_spec(\n",
     "    imaging_pipeline, lambda p: p.scattering_theory.structural_ensemble.pose.wxyz\n",
     ")\n",
     "# ... split up the `imaging_pipeline` into grid points and non-grid points\n",
@@ -517,12 +517,12 @@
     ")\n",
     "\n",
     "\n",
-    "@partial(cx.filter_vmap_with_spec, filter_spec=solution_filter_spec)\n",
+    "# @partial(cx.filter_vmap_with_spec, filter_spec=solution_filter_spec)\n",
     "def simulate_solution_image_stack(pipeline):\n",
     "    return pipeline.render()\n",
     "\n",
     "\n",
-    "@partial(cx.filter_vmap_with_spec, filter_spec=solution_filter_spec, in_axes=(0, 0))\n",
+    "# @partial(cx.filter_vmap_with_spec, filter_spec=solution_filter_spec, in_axes=(0, 0))\n",
     "def compute_solution_cross_correlation(pipeline, fourier_observed_image):\n",
     "    fourier_simulated_image = pipeline.render(get_real=False)\n",
     "    return (\n",
@@ -580,7 +580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -594,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
