update to eliminate if_mapped

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -34,7 +34,6 @@
     "from functools import partial\n",
     "\n",
     "import equinox as eqx\n",
-    "import equinox.internal as eqxi\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "from jaxtyping import PRNGKeyArray"
@@ -108,10 +107,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=eqxi.if_mapped(axis=0))\n",
+    "from cryojax.utils import get_filter_spec\n",
+    "\n",
+    "\n",
+    "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=(eqx.if_array(0), None))\n",
     "def make_particle_parameters(\n",
     "    key: PRNGKeyArray, instrument_config: cxs.InstrumentConfig\n",
-    ") -> RelionParticleParameters:\n",
+    ") -> tuple[RelionParticleParameters, RelionParticleParameters]:\n",
     "    # Generate random parameters\n",
     "\n",
     "    # Pose\n",
@@ -124,15 +126,11 @@
     "\n",
     "    # ... now in-plane translation\n",
     "    ny, nx = instrument_config.shape\n",
-    "    in_plane_offset_in_angstroms = (\n",
+    "    offset_in_angstroms = (\n",
     "        jax.random.uniform(subkey, (2,), minval=-0.2, maxval=0.2)\n",
     "        * jnp.asarray((nx, ny))\n",
     "        * instrument_config.pixel_size\n",
     "    )\n",
-    "\n",
-    "    # ... convert 2D in-plane translation to 3D, setting the out-of-plane translation to\n",
-    "    # zero\n",
-    "    offset_in_angstroms = jnp.pad(in_plane_offset_in_angstroms, ((0, 1),))\n",
     "    # ... build the pose\n",
     "    pose = cxs.EulerAnglePose.from_rotation_and_translation(rotation, offset_in_angstroms)\n",
     "\n",
@@ -174,17 +172,17 @@
     "        pose=pose,\n",
     "        transfer_theory=transfer_theory,\n",
     "    )\n",
-    "    return relion_particle_parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!!! info \"What's with the `out_axes=eqxi.if_mapped(axis=0)`?\"\n",
-    "    \n",
-    "    When we create a pytree with `eqx.filter_vmap` (or `jax.vmap`), `out_axes` should have the same structure as the output pytree. If `out_axes` is set to `None` at a particular leaf, this\n",
-    "    says that we do not want to broadcast that leaf (of course, this only works for unmapped leaves). By default `jax.vmap` sets `out_axes=0`, so all unmapped leaves get broadcasted. `equinox` allows us to pass `out_axes=eqxi.if_mapped(axes=0)`, which specifies *not* to broadcast pytree leaves unless the leaves are directly mapped."
+    "    filter_spec = get_filter_spec(\n",
+    "        relion_particle_parameters,\n",
+    "        lambda x: (\n",
+    "            x.instrument_config.voltage_in_kilovolts,\n",
+    "            x.instrument_config.pixel_size,\n",
+    "            x.transfer_theory.ctf.amplitude_contrast_ratio,\n",
+    "            x.transfer_theory.ctf.spherical_aberration_in_mm,\n",
+    "        ),\n",
+    "        inverse=True,\n",
+    "    )\n",
+    "    return eqx.partition(relion_particle_parameters, filter_spec)"
    ]
   },
   {
@@ -206,54 +204,9 @@
     "keys = jax.random.split(jax.random.PRNGKey(0), number_of_images)\n",
     "\n",
     "# ... instantiate the RelionParticleMetadata\n",
-    "particle_parameters = make_particle_parameters(keys, instrument_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RelionParticleParameters(\n",
-       "  instrument_config=InstrumentConfig(\n",
-       "    shape=(128, 128),\n",
-       "    pixel_size=weak_f32[],\n",
-       "    voltage_in_kilovolts=weak_f32[],\n",
-       "    electrons_per_angstrom_squared=weak_f32[],\n",
-       "    padded_shape=(128, 128),\n",
-       "    pad_mode='constant'\n",
-       "  ),\n",
-       "  pose=EulerAnglePose(\n",
-       "    offset_x_in_angstroms=f32[100],\n",
-       "    offset_y_in_angstroms=f32[100],\n",
-       "    view_phi=f32[100],\n",
-       "    view_theta=f32[100],\n",
-       "    view_psi=f32[100]\n",
-       "  ),\n",
-       "  transfer_theory=ContrastTransferTheory(\n",
-       "    ctf=ContrastTransferFunction(\n",
-       "      defocus_in_angstroms=f32[100],\n",
-       "      astigmatism_in_angstroms=f32[100],\n",
-       "      astigmatism_angle=f32[100],\n",
-       "      spherical_aberration_in_mm=weak_f32[],\n",
-       "      amplitude_contrast_ratio=weak_f32[],\n",
-       "      phase_shift=f32[100]\n",
-       "    ),\n",
-       "    envelope=FourierGaussian(amplitude=weak_f32[], b_factor=weak_f32[])\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "particle_parameters"
+    "particle_parameters_vmap, particle_parameters_novmap = make_particle_parameters(\n",
+    "    keys, instrument_config\n",
+    ")"
    ]
   },
   {
@@ -276,11 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... generate the starfile\n",
+    "particle_parameters = eqx.combine(particle_parameters_vmap, particle_parameters_novmap)\n",
     "write_starfile_with_particle_parameters(\n",
     "    particle_parameters, \"./relion_dataset.star\", mrc_batch_size=50\n",
     ")"
@@ -313,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
