change API in notebook

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
     "real_voxel_grid = atom_potential.as_real_voxel_grid(\n",
     "    shape,\n",
     "    voxel_size,\n",
-    "    z_planes_in_parallel=10,\n",
+    "    batch_size_for_z_planes=10,\n",
     ")"
    ]
   },
