include cif reading, replace parsing to Biopython parser

--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -11,25 +11,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Data/Packages/Utilities/VirtualEnvs/cryojax-env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jax.numpy as jnp\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
-    "from cryojax.io import read_atoms_from_pdb\n",
+    "from cryojax.io import read_atoms_from_pdb_or_cif\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
+    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb_or_cif(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     "    atom_filter=\"not element H\",\n",
