--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,24 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (507738353.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    atom_filter=\"not element H\"\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PengAtomicPotential(\n",
+      "  atom_positions=f32[54021,3],\n",
+      "  scattering_factor_a=f32[54021,5],\n",
+      "  scattering_factor_b=f32[54021,5],\n",
+      "  b_factors=None\n",
+      ")\n"
      ]
     }
    ],
    "source": [
     "import cryojax.simulator as cxs\n",
-    "from cryojax.io import read_atoms_from_pdb\n",
+    "from cryojax.io import read_atoms_from_pdb_or_cif\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities = read_atoms_from_pdb(\n",
+    "atom_positions, atom_identities = read_atoms_from_pdb_or_cif(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     "    atom_filter=\"not element H\",\n",
