--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (97349143.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    center=True\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
-    "from cryojax.io import read_atoms_from_pdb\n",
+    "from cryojax.io import read_atoms_from_pdb_or_cif\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
+    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb_or_cif(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     "    atom_filter=\"not element H\",\n",
