fixed missing tutorials with new pdb reader

--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,13 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
-    "from cryojax.io import read_atoms_from_pdb_or_cif\n",
+    "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb_or_cif(\n",
+    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     "    atom_filter=\"not element H\",\n",
-    "    is_assembly=True,\n",
-    "    i_model=0,\n",
     "    get_b_factors=True,\n",
     ")\n",
     "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)"
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f556b29e660>"
+       "<matplotlib.colorbar.Colorbar at 0x7f7910795550>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f55694b1090>"
+       "<matplotlib.colorbar.Colorbar at 0x7f78c7441d10>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
