--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -11,15 +11,13 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
-    "from cryojax.io import read_atoms_from_pdb_or_cif\n",
+    "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
-    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb_or_cif(\n",
+    "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     "    atom_filter=\"not element H\",\n",
-    "    is_assembly=True,\n",
-    "    i_model=0,\n",
     "    get_b_factors=True,\n",
     ")\n",
     "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f85bfe11e50>"
+       "<matplotlib.colorbar.Colorbar at 0x7f04ce942c10>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
