rename relion interface to be more clear

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -48,25 +48,25 @@
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "from cryojax.data import RelionParticleDataset, RelionParticleMetadata"
+    "from cryojax.data import RelionParticleImageReader, RelionParticleParameterReader"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleDataset`.\n",
+    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleImageReader`.\n",
     "\n",
-    "!!! info \"What is a `RelionParticleDataset`?\"\n",
+    "!!! info \"What is a `RelionParticleImageReader`?\"\n",
     "\n",
-    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleDataset`. This object takes in a\n",
-    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `RelionParticleStack`\n",
-    "    is returned. Specifically, the `RelionParticleStack` stores the image(s) in the image stack, as well as the metadata, represented as a `RelionParticleParameters` container,\n",
-    "    in the STAR file. The metadata is instantiates compatible `cryojax` objects. For example, the `RelionParticleParameters`\n",
+    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleImageReader`. This object takes in a\n",
+    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `RelionParticleImages`\n",
+    "    is returned. Specifically, the `RelionParticleImages` stores the image(s) in the image stack, as well as the metadata, represented as a `RelionParticleParameters` container,\n",
+    "    in the STAR file. The metadata instantiates compatible `cryojax` objects. For example, the `RelionParticleParameters`\n",
     "    stores a `cryojax` models for the contrast transfer function (the `ContrastTransferFunction` class) and the pose (the `EulerAnglePose` class).\n",
     "\n",
-    "    More generally, a `RelionParticleDataset` is an `AbstractDataset`, which is complemented by the abstraction of a particle stack: the `AbstractParticleStack`.\n",
-    "    These abstract interfaces are part of the `cryojax` public API!"
+    "    More generally, a `RelionParticleImageReader` is an `AbstractDataset`.\n",
+    "    This abstract interface are part of the `cryojax` public API!"
    ]
   },
   {
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RelionParticleStack(\n",
+      "RelionParticleImages(\n",
       "  parameters=RelionParticleParameters(\n",
       "    instrument_config=InstrumentConfig(\n",
       "      shape=(100, 100),\n",
@@ -104,7 +104,7 @@
       "        amplitude_contrast_ratio=f32[],\n",
       "        phase_shift=f32[]\n",
       "      ),\n",
-      "      envelope=Constant(value=weak_f32[])\n",
+      "      envelope=None\n",
       "    )\n",
       "  ),\n",
       "  image_stack=f32[100,100]\n",
@@ -114,13 +114,13 @@
    ],
    "source": [
     "# Read in the dataset and plot an image\n",
-    "particle_metadata = RelionParticleMetadata(\n",
+    "particle_parameter_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     ")\n",
-    "particle_dataset = RelionParticleDataset(particle_metadata)\n",
+    "image_reader = RelionParticleImageReader(particle_parameter_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
-    "relion_particle = particle_dataset[0]\n",
+    "relion_particle = image_reader[0]\n",
     "print(relion_particle)"
    ]
   },
@@ -194,7 +194,7 @@
    ],
    "source": [
     "# Access multiple images in the stack\n",
-    "relion_particles = particle_dataset[0:3]\n",
+    "relion_particles = image_reader[0:3]\n",
     "print(relion_particles.image_stack.shape)"
    ]
   },
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we see that the `image_stack` attribute has a leading dimension for each image. We can also inspect the metadata read from the STAR file by printing the `ContrastTransferFunction`."
+    "Now, we see that the `image_stack` attribute has a leading dimension for each image. We can also inspect the parameter_reader read from the STAR file by printing the `ContrastTransferFunction`."
    ]
   },
   {
@@ -290,7 +290,7 @@
     "\n",
     "\n",
     "# Get the particle\n",
-    "relion_particle = particle_dataset[0]\n",
+    "relion_particle = image_reader[0]\n",
     "# ... and the image in fourier space\n",
     "fourier_image = rfftn(relion_particle.image_stack)\n",
     "# ... and the cartesian coordinate system\n",
@@ -378,11 +378,6 @@
    "source": [
     "Here, we see that the Thon rings in our power spectrum are faint since the pixel since of our images is $4 \\ \\AA$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
