--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -218,8 +218,8 @@
       "  defocus_in_angstroms=Array([10025.484, 10025.484, 10025.484], dtype=float32),\n",
       "  astigmatism_in_angstroms=Array([50.970703, 50.970703, 50.970703], dtype=float32),\n",
       "  astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
-      "  spherical_aberration_in_mm=Array(2.7, dtype=float32),\n",
-      "  amplitude_contrast_ratio=Array(0.1, dtype=float32),\n",
+      "  spherical_aberration_in_mm=Array([2.7, 2.7, 2.7], dtype=float32),\n",
+      "  amplitude_contrast_ratio=Array([0.1, 0.1, 0.1], dtype=float32),\n",
       "  phase_shift=Array([0., 0., 0.], dtype=float32)\n",
       ")\n"
      ]
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that not all attributes of the `ContrastTransferFunction` have a leading dimension. For those familiar with RELION STAR format, only the `ContrastTransferFunction` parameters stored on a per-particle basis have a leading dimension! Parameters stored in the opticsGroup do not have a leading dimension."
+    "Notice that all attributes of the `ContrastTransferFunction` have a leading dimension. For those familiar with RELION STAR format, even the `ContrastTransferFunction` parameters not stored on a per-particle basis (the opticsGroup) have a leading dimension! This is for convenience working with `jax.vmap` transformations."
    ]
   },
   {
