--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -214,20 +214,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ContrastTransferFunction(\n",
-      "  defocus_in_angstroms=Array([10025.484, 10025.484, 10025.484], dtype=float32),\n",
-      "  astigmatism_in_angstroms=Array([50.970703, 50.970703, 50.970703], dtype=float32),\n",
-      "  astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
-      "  spherical_aberration_in_mm=Array([2.7, 2.7, 2.7], dtype=float32),\n",
-      "  amplitude_contrast_ratio=Array([0.1, 0.1, 0.1], dtype=float32),\n",
-      "  phase_shift=Array([0., 0., 0.], dtype=float32)\n",
+      "RelionParticleParameters(\n",
+      "  instrument_config=InstrumentConfig(\n",
+      "    shape=(100, 100),\n",
+      "    pixel_size=Array([4., 4., 4.], dtype=float32),\n",
+      "    voltage_in_kilovolts=Array([300., 300., 300.], dtype=float32, weak_type=True),\n",
+      "    electrons_per_angstrom_squared=Array([100., 100., 100.], dtype=float32, weak_type=True),\n",
+      "    padded_shape=(100, 100),\n",
+      "    pad_mode='constant'\n",
+      "  ),\n",
+      "  pose=EulerAnglePose(\n",
+      "    offset_x_in_angstroms=Array([0., 0., 0.], dtype=float32),\n",
+      "    offset_y_in_angstroms=Array([0., 0., 0.], dtype=float32),\n",
+      "    view_phi=Array([0., 0., 0.], dtype=float32),\n",
+      "    view_theta=Array([0., 0., 0.], dtype=float32),\n",
+      "    view_psi=Array([0., 0., 0.], dtype=float32)\n",
+      "  ),\n",
+      "  transfer_theory=ContrastTransferTheory(\n",
+      "    ctf=ContrastTransferFunction(\n",
+      "      defocus_in_angstroms=Array([10025.484, 10025.484, 10025.484], dtype=float32),\n",
+      "      astigmatism_in_angstroms=Array([50.970703, 50.970703, 50.970703], dtype=float32),\n",
+      "      astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
+      "      spherical_aberration_in_mm=Array([2.7, 2.7, 2.7], dtype=float32),\n",
+      "      amplitude_contrast_ratio=Array([0.1, 0.1, 0.1], dtype=float32),\n",
+      "      phase_shift=Array([0., 0., 0.], dtype=float32)\n",
+      "    ),\n",
+      "    envelope=None\n",
+      "  )\n",
       ")\n"
      ]
     }
    ],
    "source": [
     "# Inspect the CTF\n",
-    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)"
+    "eqx.tree_pprint(relion_particles.parameters, short_arrays=False)"
    ]
   },
   {
