better boolean names. option to not broadcast the config

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,8 @@
    ],
    "source": [
     "# Inspect the CTF\n",
-    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)"
+    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)\n",
+    "eqx.tree_pprint(relion_particles.parameters.instrument_config, short_arrays=False)"
    ]
   },
   {
