hacky solution to recompilation issue

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,7 @@
    ],
    "source": [
     "# Inspect the CTF\n",
-    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)\n",
-    "eqx.tree_pprint(relion_particles.parameters.instrument_config, short_arrays=False)"
+    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)"
    ]
   },
   {
