--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -71,18 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the dataset and plot an image\n",
-    "metadata = RelionParticleParameterReader(\n",
+    "param_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     ")\n",
-    "dataset = RelionParticleImageReader(metadata)\n",
+    "image_reader = RelionParticleImageReader(param_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
-    "relion_particle = dataset[0]"
+    "relion_particle = image_reader[0]"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
    ],
    "source": [
     "# Access multiple images in the stack\n",
-    "relion_particles = dataset[0:3]\n",
+    "relion_particles = image_reader[0:3]\n",
     "print(relion_particles.images.shape)"
    ]
   },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
     "\n",
     "\n",
     "# Get the particle\n",
-    "relion_particle = dataset[0]\n",
+    "relion_particle = image_reader[0]\n",
     "# ... and the image in fourier space\n",
     "fourier_image = rfftn(relion_particle.images)\n",
     "# ... and the cartesian coordinate system\n",
@@ -347,16 +347,11 @@
    "source": [
     "Here, we see that the Thon rings in our power spectrum are faint since the pixel since of our images is $4 \\ \\AA$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
