ParticleImages to ParticleStack

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
    "source": [
     "import jax\n",
     "\n",
-    "from cryojax.data import RelionParticleImageReader, RelionParticleParameterReader\n",
+    "from cryojax.data import RelionParticleParameterReader, RelionParticleStackReader\n",
     "from cryojax.image import normalize_image, rfftn\n",
     "\n",
     "\n",
@@ -118,8 +118,8 @@
     "    path_to_relion_project=\"./\",\n",
     "    make_config_fn=make_config_fn,\n",
     ")\n",
-    "image_reader = RelionParticleImageReader(parameter_reader)\n",
-    "particle_stack = image_reader[:3]\n",
+    "particle_reader = RelionParticleStackReader(parameter_reader)\n",
+    "particle_stack = particle_reader[:3]\n",
     "# Create a normalized image stack in fourier space\n",
     "fourier_image_stack = rfftn(normalize_image_stack(particle_stack.images), axes=(1, 2))\n",
     "# Plot images\n",
