--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -43,29 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "from cryojax.data import RelionParticleImageReader, RelionParticleParameterReader"
+    "from cryojax.data import RelionParticleParameterReader, RelionParticleStackReader"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleImageReader`.\n",
+    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleStackReader`.\n",
     "\n",
-    "!!! info \"What is a `RelionParticleImageReader`?\"\n",
+    "!!! info \"What is a `RelionParticleStackReader`?\"\n",
     "\n",
-    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleImageReader`. This object takes in a\n",
-    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `RelionParticleImages`\n",
-    "    is returned. Specifically, the `RelionParticleImages` stores the image(s) in the image stack, as well as the metadata, represented as a `RelionParticleParameters` container,\n",
-    "    in the STAR file. The metadata instantiates compatible `cryojax` objects. For example, the `RelionParticleParameters`\n",
+    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleStackReader`. This object takes in a\n",
+    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `ParticleStack`\n",
+    "    is returned. Specifically, the `ParticleStack` stores the image(s) in the image stack, as well as the parameters, represented as a `ParticleParameters` container,\n",
+    "    in the STAR file. The metadata instantiates compatible `cryojax` objects. For example, the `ParticleParameters`\n",
     "    stores a `cryojax` models for the contrast transfer function (the `ContrastTransferFunction` class) and the pose (the `EulerAnglePose` class).\n",
     "\n",
-    "    More generally, a `RelionParticleImageReader` is an `AbstractDataset`.\n",
+    "    More generally, a `RelionParticleStackReader` is an `AbstractDataset`.\n",
     "    This abstract interface are part of the `cryojax` public API!"
    ]
   },
@@ -80,9 +80,9 @@
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     ")\n",
-    "image_reader = RelionParticleImageReader(param_reader)\n",
+    "particle_reader = RelionParticleStackReader(param_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
-    "relion_particle = image_reader[0]"
+    "relion_particle = particle_reader[0]"
    ]
   },
   {
@@ -155,7 +155,7 @@
    ],
    "source": [
     "# Access multiple images in the stack\n",
-    "relion_particles = image_reader[0:3]\n",
+    "relion_particles = particle_reader[0:3]\n",
     "print(relion_particles.images.shape)"
    ]
   },
@@ -258,7 +258,7 @@
     "\n",
     "\n",
     "# Get the particle\n",
-    "relion_particle = image_reader[0]\n",
+    "relion_particle = particle_reader[0]\n",
     "# ... and the image in fourier space\n",
     "fourier_image = rfftn(relion_particle.images)\n",
     "# ... and the cartesian coordinate system\n",
