--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
     "import cryojax.simulator as cxs\n",
     "from cryojax.data import (\n",
     "    ParticleParameters,\n",
-    "    RelionParticleImageReader,\n",
     "    RelionParticleParameterReader,\n",
+    "    RelionParticleStackReader,\n",
     "    write_simulated_image_stack_from_starfile,\n",
     "    write_starfile_with_particle_parameters,\n",
     ")\n",
@@ -269,7 +269,7 @@
     "parameter_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    "    is_envelope_function_loaded=True,\n",
+    "    is_loading_envelope_function=True,\n",
     ")"
    ]
   },
@@ -403,16 +403,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "args = (potential, potential_integrator)  # the args compute_image takes\n",
     "\n",
     "write_simulated_image_stack_from_starfile(\n",
-    "    metadata=parameter_reader,\n",
-    "    compute_image=compute_image,\n",
-    "    args=args,\n",
+    "    parameter_reader,\n",
+    "    compute_image,\n",
+    "    args,\n",
     "    is_jittable=True,\n",
     "    batch_size_per_mrc=10,\n",
     "    seed=None,\n",
@@ -479,7 +479,7 @@
     "parameter_reader_for_noise_images = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    "    is_envelope_function_loaded=True,\n",
+    "    is_loading_envelope_function=True,\n",
     ")"
    ]
   },
@@ -689,18 +689,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can load our images using `RelionParticleImageReader`s"
+    "Now we can load our images using `RelionParticleStackReader`s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "particle_reader_noiseless = RelionParticleImageReader(parameter_reader)\n",
+    "particle_reader_noiseless = RelionParticleStackReader(parameter_reader)\n",
     "\n",
-    "particle_reader_noisy = RelionParticleImageReader(parameter_reader_for_noise_images)"
+    "particle_reader_noisy = RelionParticleStackReader(parameter_reader_for_noise_images)"
    ]
   },
   {
@@ -743,7 +743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -757,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
