--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -79,6 +79,10 @@
     "param_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
+    "    load_metadata=False,  # Set to True if you want to load the raw starfile dataframes\n",
+    "    load_arrays_on_cpu=False,  # Set to True to load jax arrays on CPU\n",
+    "    broadcast_optic_group=True,  # This is useful for vmapping\n",
+    "    load_envelope_function_parameters=False,  # Assumes bfactor is 0 and ctf amp. is 1\n",
     ")\n",
     "particle_reader = RelionParticleStackReader(param_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
@@ -351,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "cryojax-env",
    "language": "python",
    "name": "python3"
   },
@@ -365,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
