better naming; middle ground of PR #350

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,9 @@
     "param_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
+    "    is_metadata_loaded=False,  # Set to `True` to load the raw starfile metadata\n",
+    "    is_optics_group_broadcasted=True,  # This is useful for vmapping\n",
+    "    is_envelope_function_loaded=False,  # Assumes b_factor is 0 and CTF amplitude is 1\n",
     ")\n",
     "particle_reader = RelionParticleStackReader(param_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
