--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -79,9 +79,9 @@
     "param_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
-    "    is_metadata_loaded=False,  # Set to `True` to load the raw starfile metadata\n",
-    "    is_optics_group_broadcasted=True,  # This is useful for vmapping\n",
-    "    is_envelope_function_loaded=False,  # Assumes b_factor is 0 and CTF amplitude is 1\n",
+    "    loads_metadata=False,  # Set to `True` to load the raw starfile metadata\n",
+    "    broadcasts_optics_group=True,  # This is useful for vmapping\n",
+    "    loads_envelope=False,  # Assumes b_factor is 0 and CTF amplitude is 1\n",
     ")\n",
     "particle_reader = RelionParticleStackReader(param_reader)\n",
     "# ... get the zeroth entry in the STAR file\n",
