--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,6 @@
     }
    ],
    "source": [
-    "from cryojax.image import operators as op\n",
     "from cryojax.inference import distributions as dist\n",
     "\n",
     "\n",
@@ -280,7 +279,7 @@
     "    imaging_pipeline,\n",
     "    signal_scale_factor=1.0,\n",
     "    variance=1.0,\n",
-    "    is_signal_normalized=True,\n",
+    "    normalizes_signal=True,\n",
     ")\n",
     "# ... then, either simulate an image from this distribution\n",
     "key = jax.random.PRNGKey(seed=0)\n",
